--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+
+	<div class="users">
+		<button class="user" name="aallen-dev">alex</button>
+		<button class="user" name="jrharper0592">jonathan</button>
+		<button class="user" name="matthiasak">matt</button>
+	</div>
+	<div id="userInfo"></div>
+	<div id="repoList">
+		Users Repositories
+	</div>
+
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
 </body>
 
