nightmare mode. polished, added routing

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 </head>
 
 <body>
-
-	<div class="users">
-		<button class="user" name="aallen-dev">alex</button>
-		<button class="user" name="jrharper0592">jonathan</button>
-		<button class="user" name="matthiasak">matt</button>
+	<header class="right">
+		<h3>
+			TIY Jan 15 Cohort GitHub Repositories
+		</h3>
+		<hr>
+	</header>
+	<div class="users right">
 	</div>
 	<div id="userInfo"></div>
-	<div id="repoList">
-		Users Repositories
+	<div id="repoList" class="right">
+		&nbsp;&nbsp;Users Repositories <small>select title to view branches</small>
 	</div>
 
     <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
